--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
   <script src="script.js"></script>
   <div class="footer">
     <h3>Indah Fadilah Lubis</h3>
-    <h3>MBKM USK PROGATE</h3>
-    <h3>Kelas A</h3>
+    <h3>MBKM USK</h3>
   </div>
 </body>
 </html>
